package at.fhtw.tourplanner.domain.model;

public enum TransportType {
    BIKE,
    HIKE,
    RUNNING,
    VACATION
}
